deploy/k8s/main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moon-web-main
  namespace: moon-web
  labels:
    app.kubernetes.io/name: moon-web
    app.kubernetes.io/component: main
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: moon-web
    app.kubernetes.io/component: main
  ports:
    - name: http
      port: 80
      targetPort: http
