deploy/k8s/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moon-web-main
  namespace: moon
  labels:
    app.kubernetes.io/name: moon-web
    app.kubernetes.io/component: main
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  ingressClassName: kong
  rules:
    - host: moon.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moon-web-main
                port:
                  number: 80
